Interim filter by animation fixes
Would rather focus on filter-focus div instead of top of page. However,
running into problem when social-ventures does not require a scroll (as
it's too short)

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,11 @@ a:hover {
 	color:#23aebb;
 }
 
+#filter-focus {
+	position: absolute;
+	top: 280px;
+}
+
 .contentIndex p img { 
 	display:none;
 }
